Bug 297958 - function to mark an addressbook entry as personal which is referred to in calligra words is missing
Summary: function to mark an addressbook entry as personal which is referred to in cal...
Status: RESOLVED FIXED
Alias: None
Product: calligracommon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-12 11:20 UTC by m.wege
Modified: 2012-04-16 15:42 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
remove kaddressbook integration (16.65 KB, patch)
2012-04-16 14:58 UTC, Halla Rempt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description m.wege 2012-04-12 11:20:09 UTC
User-Agent:       Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/534.34 (KHTML, like Gecko) rekonq Safari/534.34
Build Identifier: 

Calligra Words allows to pull the author information out of Kaddressbook via
File-document-information-author->load-from addressbook.
When I do this, it informs me that I have not set the contact which contains my personal information and instructs me to do it by seting it from "edit-save as personal contact data".  Unfortunately this function does not exist in Kaddressbook. I am not sure whether to report this to calligra or to kaddressbook. It seems like that calligra refers to a function which once existed or was planed in Kaddressbook? Since it makes sense to have this, I am reporting this to kaddressbook first. If I am wrong, please reassign this to Calligra.

Reproducible: Always

Actual Results:  
-

Expected Results:  
-

-
Comment 1 Christophe Marin 2012-04-12 14:13:48 UTC
reassign
Comment 2 Camilla Boemann 2012-04-12 19:17:04 UTC
Christophe, could you please shed some light, why yuo reassign this. I'm in the dark of how addressbook works
Comment 3 Camilla Boemann 2012-04-13 05:00:21 UTC
if anything this is a generic calligra bug then
Comment 4 Halla Rempt 2012-04-16 14:58:12 UTC
Created attachment 70430 [details]
remove kaddressbook integration

I propose this patch. I couldn't find any useful way to actually make this work, and for Calligra to refer to the menu structure of another application is always going to be weird.

The actual interfaces we use are deprecated in any case.
Comment 5 Camilla Boemann 2012-04-16 15:15:10 UTC
I agree, please commit
Comment 6 Halla Rempt 2012-04-16 15:42:49 UTC
Git commit 864ebc075e54e7c52c971556e7f009dd28cc1f85 by Boudewijn Rempt.
Committed on 16/04/2012 at 17:43.
Pushed by rempt into branch 'master'.

Remove old KAddressBook integration

a) I doubt anyone ever used it in earnest.
b) trying to guide the user through the menus of another application
is not maintainable

M  +1    -48   libs/main/KoDocumentInfoDlg.cpp
M  +0    -2    libs/main/KoDocumentInfoDlg.h
M  +103  -116  libs/main/koDocumentInfoAuthorWidget.ui

http://commits.kde.org/calligra/864ebc075e54e7c52c971556e7f009dd28cc1f85