Remove old KAddressBook integration

a) I doubt anyone ever used it in earnest.
b) trying to guide the user through the menus of another application
is not maintainable

BUG:297958